tests/compile_fail/lt_pointer.cc
// SPDX-License-Identifier: MIT
#include <umitest/check.hh>

void test() {
    umi::test::check_lt("a", "b");
}
